VDMS/Content/Site.css
.container-fluid {
    padding-right: 15px;
    padding-left: 15px;
    margin-right: auto;
    margin-left: auto;
}
.vdf-logo{
	height: 65px;
	width: 65px;
	margin-left: -22px;
	display: block;
	margin-top:15px;
	float: left;
}

.vdf-logo img{
	
}
.vdf-brand-text{
	text-decoration: none;
	display: block;
    color: #E60000;
    font-size: 25px;
    float:left;
    margin-top: 29px;
    margin-left: 10px;
    font-weight: bold;}

/* Set padding to keep content from hitting the edges */
.body-content {
    padding-left: 15px;
    padding-right: 15px;
}

/* Override the default bootstrap behavior where horizontal description lists 
   will truncate terms that are too long to fit in the left column 
*/
.dl-horizontal dt {
    white-space: normal;
}

/* Set width on the form input elements since they're 100% wide by default */
input,
select,
textarea {
    max-width: 280px;
}


.vdf-menu-container{
	background-color: #E60000;
}
.vdf-header-container{
	height: 100px;

}
.vdf-footer-container{


}


select{
 border-radius: 3px !important;
 border: 1px solid #ddd !important;
}

select:focus{
 border-color: #9c2aa0 !important;
 border-color: rgba(156, 42, 160, 0.8) !important;
 *border-color: #9c2aa0 !important;
    box-shadow: 0 1px 1px rgba(156, 42, 160, 0.075) inset, 0 0 4px rgba(156, 42, 160, 0.6) !important;
    outline: 0 none;
}

input, select, textarea{
 border-radius: 3px !important;
 border: 1px solid #ddd !important;
}

 input:focus, textarea:focus, select:focus{
/*  border: 10px solid #9c2aa0 !important; */
 border-color: #9c2aa0 !important;
 border-color: rgba(156, 42, 160, 0.8) !important;
 *border-color: #9c2aa0 !important;
    box-shadow: 0 1px 1px rgba(156, 42, 160, 0.075) inset, 0 0 4px rgba(156, 42, 160, 0.6) !important;
    outline: 0 none !important;
}

#vdf-home {
	margin-left: -20px;
    width: 60px;
    height: 50px;
    background: url(../vdf-home.png);
    background-position-x: 4px;
    background-position-y: -2px;
    background-repeat: no-repeat;
    background-attachment: initial;
    background-origin: initial;
    background-size: 48px 51px;
    background-color: transparent
}
li#vdf-home:hover {
	background-color: #CD0000;

}
#vdf-home a {
	width: 59px;
    height: 51px;
}


table th a  {
	color: #fff;
}

table >tbody> tr > td > a {
	color: #9c2aa0;
}
table {
    margin-left:-14px;
    width:102.5%;

}


table th a:hover{
	color:#fefefe;
}

table th:hover{
	background-color:#CD0000;
	text-decoration: none;
}
table th ,td{
	border: 1px solid #C0C0C0;
    padding: 5px;
    
}


table th:hover{
	color:#fff;
}
table th>a{
	text-decoration: none !important;
}


.header {
            background-color: #E60000;
            font-weight: bold;
            color: #FFFFFF;
        }

tr:nth-of-type(even) { 
  background: #F1F1F1; 
}

.custom-combobox {
    position: relative;
    display: inline-block;
}

.custom-combobox-toggle {
    position: absolute;
    top: 0;
    bottom: 0;
    margin-left: -1px;
    padding: 0;
    /* support: IE7 */
    *height: 1.7em;
    *top: 0.1em;
}

.custom-combobox-input {
    margin: 0;
    padding: 0.3em;
}

@media screen and (max-width: 497px) {
    .vdf-brand-text{
    	font-size:19px;
    	margin-top: 32px; 	

    }
    }


    



@media screen and (max-width: 990px) {


     #vdf-home{
     	margin-left:0px;
     	height:40px;
     	width: 100%

     }

     #vdf-home a{
     	height: 46px;
     	width: 100%;
     }
    }

@media screen and (max-width: 650px) {

/* Force table to not be like tables anymore */
	table, thead, tbody, th, td, tr { 
		display: block; 
	}
	
	/* Hide table headers (but not display: none;, for accessibility) */
	thead tr { 
		position: absolute;
		top: -9999px;
		left: -9999px;
	}
	
	tr { border: 1px solid #ccc; }
		
	td { 
		/* Behave  like a "row" */
		border: none;
		border-bottom: 1px solid #eee; 
		position: relative;
		padding-left: 50%; 
	}
	
	td:before { 
		/* Now like a table header */
		position: absolute;
		/* Top/left values mimic padding */
		top: 6px;
		left: 6px;
		width: 45%; 
		padding-right: 10px; 
		white-space: nowrap;
	}
    .vdf-doc td:nth-of-type(1):before { content: "DocSerial"; }
    .vdf-doc td:nth-of-type(2):before { content: "Branch Name"; }
	.vdf-doc td:nth-of-type(3):before { content: "Type"; }
	.vdf-doc td:nth-of-type(4):before { content: "Created by"; }
	.vdf-doc td:nth-of-type(5):before { content: "Inbound"; }
	.vdf-doc td:nth-of-type(6):before { content: "Recipient"; }
	.vdf-doc td:nth-of-type(7):before { content: "Description"; }
	.vdf-doc td:nth-of-type(8):before { content: "Creation Date"; 
	}
}

